# SkyPro-Coursework-PostgreSQL

./: README.md  main.py  pyproject.toml
classes/: class_DBManager.py  class_HHParser.py
utils/: config.py  utils.py
